--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         </div>
       </section>
       <footer></footer>
-    
+    <script src="App.js"></script>
     <script src="Add.js"></script>
     <script src="Data.js"></script>
     <script src="Calc.js"></script>
+  
    
     
   </body>
