construction all calc function (done)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="info">
           <p id="quantity">Załadowałeś:</p>
-          <p id="free">Pozostało miejsca:</p>
+          <p id="free">Pozostało miejsca: <span id="freeSpan"></span> <span id="freeSpan2"></span></p>
          
         </div>
       </section>
