New class Double add

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             max="33"
           />
           <label for="quantity5">Zaznacz jeżeli można piętrować:</label>
-          <input type="checkbox" id="quantity5" name="quantity5" />
+          <input type="checkbox" id="quantity5" name="quantity5" >
         </div>
         <div class="btns">
           <Button id="add">Dodaj</Button>
@@ -60,6 +60,7 @@
     <script src="Add.js"></script>
     <script src="Data.js"></script>
     <script src="Calc.js"></script>
+    <script src="Double.js"></script>
   
    
     
