--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </section>
       <footer></footer>
-      <script src="Remove.js"></script>
+      <!-- <script src="Remove.js"></script> -->
     <script src="Add.js"></script>
     <script src="Data.js"></script>
     <script src="Calc.js"></script>
