--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </section>
       <footer></footer>
       <!-- <script src="Remove.js"></script> -->
+      <script src="App.js"></script>
     <script src="Add.js"></script>
     <script src="Data.js"></script>
     <script src="Calc.js"></script>
