add welcome page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Wykorzystaj przestrzeń ładunkową</title>
+    <meta name="Description" content="Przeliczanie wolnej powierzchni ładunkowej na naczepie">
+    <meta name="Keywords" content="Przeliczanie powierzni ładunkowej, Ldm, Transport, ile palet załaduje, naczepa, ile się zmieści palet">
+    <meta name="author" content="oprogramowanie: developerweb.pl">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/94b0fb4d73.js" crossorigin="anonymous"></script>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="welcome">
+      <i class="fas fa-sort-down"></i>
+      <i class="fas fa-sort-down"></i>
+      <i class="fas fa-sort-down"></i>
+      
+    </div>
     <div class="wrapper">
-      <header></header>
+      <header>
+        <h1>To jest wersja testowa aplikacji do zarządzania powierzchnią ładunkową pojadów</h1>
+        <p>(Wersja desktop)</p>
+      </header>
       <section>
         <div class="data">
           <label for="quantity1">Szerokość palety / elemetu:</label>
@@ -55,7 +71,10 @@
          
         </div>
       </section>
-      <footer></footer>
+      <footer>
+        <a class='foot'href="mailto:tomasz.matras@developerweb.pl">tomasz.matras@developerweb.pl</a>
+        <p>Napisz do mnie: co Ci sie podoba, co nie, co trzeba dodać...</p>
+      </footer>
       <!-- <script src="Remove.js"></script> -->
       <script src="App.js"></script>
     <script src="Add.js"></script>
